Test fec definition partial

--- a/fec_eregs/templates/regulations/partial-definition.html
+++ b/fec_eregs/templates/regulations/partial-definition.html
@@ -35,7 +35,7 @@
                 {{node.marked_up|safe}}
             </p>
         {% endif  %}
-        {% if node.marked_up %}
+        {% if node.children %}
             <p>See the full definition at:</p>
         {% endif  %}
 
