--- a/fec_eregs/static/regulations/css/less/variables.less
+++ b/fec_eregs/static/regulations/css/less/variables.less
@@ -81,7 +81,7 @@ variables.less contains all theme variable / variable overrides
 @mid_text: #43484E;
 @orange: #FBCD92;
 @light_orange: #FFECD1;
-@pacific_hover: #328ED8;
+@pacific_hover: @primary-focus;
 @pacific_light: #CCE3F5;
 @red_orange_80: #D96A4F;
 @red_orange_50: #E9A193;
