--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -57,7 +57,8 @@
  */
 .app-nav-list,
 .expandable,
-.reg-list {
+.reg-list,
+.toc-head {
   a {
     border-bottom: none;
   }
@@ -68,4 +69,101 @@ a {
   &.next-prev-link {
     border-bottom: none;
   }
+}
+
+/*
+ * Chrome overrides
+ */
+
+@subhead-primary-border: 2px solid @primary;
+@subhead-secondary-border: 1px solid @primary;
+@subhead-background: @cream;
+@toc-border: 1px solid @sand;
+@toc-background: @ivory;
+
+.main-head {
+  border-bottom: 3px solid @primary;
+}
+
+.panel {
+  background-color: @ivory;
+  border-right: @subhead-primary-border;
+}
+
+// TOC
+.drawer-header .toc-type, .toc-head {
+  border-right: @subhead-primary-border;
+}
+
+.subpart-heading {
+  background-color: @ivory;
+  border-bottom: @toc-border;
+  border-top: @toc-border;
+}
+
+.toc-head {
+  background-color: @cream;
+  border-bottom: @subhead-secondary-border;
+
+  a:hover {
+    background-color: @primary;
+  }
+}
+
+.regulation-nav a:link, .regulation-nav a:visited {
+  border-bottom: @toc-border;
+  color: @primary;
+}
+
+.drawer-header .toc-type {
+  background-color: @ivory;
+  border-bottom: @toc-border;
+}
+
+.toc-nav-link.current {
+  color: @cream;
+  background-color: @primary;
+}
+
+.sub-head {
+  background-color: @cream;
+  border-bottom: @subhead-secondary-border;
+  color: @primary;
+}
+
+.drawer-toggles li {
+  border-right: @subhead-secondary-border;
+}
+
+.toc-nav-link {
+  border-right: @subhead-secondary-border;
+}
+
+// FEC is less boxy
+.regulation-nav a {
+  padding: 10px 5px;
+  margin: 0 10px;
+}
+
+
+// Sidebar, Secondary content
+//
+// This component should match they styles of the toc.
+.secondary-content {
+  border-left: @toc-border;
+
+  .expandable {
+    background-color: @ivory;
+    border-bottom: @toc-border;
+  }
+
+  .expand-drawer {
+    border-bottom: @toc-border;
+  }
+}
+
+// Header
+.title a:link, .title a:visited,
+.app-nav a:link, .app-nav a:visited {
+  color: @primary;
 }
