--- a/fec_eregs/static/regulations/css/less/variables.less
+++ b/fec_eregs/static/regulations/css/less/variables.less
@@ -37,6 +37,8 @@ variables.less contains all theme variable / variable overrides
 @beige-dark: #c09c7c;
 @black: #000205;
 
+@sand: #e7dbbf;
+
 @disabled: #737373;
 
 // Color aliases
