--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -71,6 +71,15 @@ a {
   }
 }
 
+.definition,
+.definition:link,
+.definition:visited,
+.internal,
+.internal:link,
+.internal:visited {
+  border-bottom-style: dotted;
+}
+
 /*
  * Chrome overrides
  */
