Fixes for eregs styles
- Update FEC colors.
- Don't save space on the closed panel for the timeline drawer.
- Clean up some unnecessary overrides
- Remove untouched eRegs variables
- Fix mainhead size

--- a/fec_eregs/static/fec_eregs/scss/_components.scss
+++ b/fec_eregs/static/fec_eregs/scss/_components.scss
@@ -27,6 +27,10 @@
 }
 
 //TODO when the breakpoints are fixed, this shouldn't be necessary
-.fec-main-head {
+.main-head {
   overflow: hidden;
+}
+
+.fec-disclaimer {
+  @extend .disclaimer;
 }
