--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -1,6 +1,6 @@
 {% load static from staticfiles %}
-<div class="fec-main-head main-head">
-  <div class="fec-disclaimer disclaimer">
+<div class="main-head">
+  <div class="fec-disclaimer">
     <span class="disclaimer__left">Looking for <a href="http://www.fec.gov">FEC.gov?</a></span>
     <span class="disclaimer__center">
       An official website of the United States Government
