--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -86,9 +86,10 @@ a {
 
 @subhead-primary-border: 2px solid @primary;
 @subhead-secondary-border: 1px solid @primary;
-@subhead-background: @cream;
-@toc-border: 1px solid @sand;
-@toc-background: @ivory;
+@subhead-tertiary-border: 1px solid @gray-medium;
+@subhead-background: @neutral;
+@toc-border: 1px solid @neutral-contrast;
+@toc-background: @neutral;
 
 
 // Header
@@ -102,7 +103,7 @@ a {
 }
 
 .sub-head {
-  background-color: @cream;
+  background-color: @subhead-background;
   border-bottom: @subhead-secondary-border;
   color: @primary;
 }
@@ -110,32 +111,31 @@ a {
 
 // TOC header
 .toc-head {
-  background-color: @cream;
+  background-color: @toc-background;
   border-bottom: @subhead-secondary-border;
 
+  a.current,
   a:hover {
     background-color: @primary;
   }
 }
 
 .drawer-toggles {
-  li { border-right: @subhead-secondary-border; }
+  li { border-right: @subhead-tertiary-border; }
 
   .close & {
     border-top: @subhead-secondary-border;
 
-    li { border-bottom: @subhead-secondary-border; }
+    li { border-bottom: @subhead-tertiary-border; }
   }
 }
 
 .toc-nav-link {
-  border-right: @subhead-secondary-border;
-
   .close &.current,
   .close &:hover,
   &:hover,
   &.current {
-    color: @cream;
+    color: @toc-background;
     background-color: @primary;
   }
 }
@@ -143,8 +143,12 @@ a {
 
 // TOC
 .panel {
-  background-color: @ivory;
+  background-color: @toc-background;
   border-right: @subhead-primary-border;
+
+  &.close {
+    top: @mainhead_height + @subhead_height + 2 * 34px + 1; // Header, subheader, 2 TOC list items + 1 drawer-toggles border
+  }
 }
 
 .panel-slide {
@@ -187,18 +191,18 @@ a {
   }
 }
 
-.drawer-header .toc-type, .toc-head {
+.drawer-header, .toc-head {
   border-right: @subhead-primary-border;
 }
 
 .drawer-header .toc-type,
 {
-  background-color: @ivory;
+  background-color: @toc-background;
   border-bottom: @toc-border;
 }
 
 .subpart-heading {
-  background-color: @ivory;
+  background-color: @toc-background;
   border-bottom: @toc-border;
   border-top: @toc-border;
 }
@@ -222,7 +226,7 @@ a {
   border-left: @toc-border;
 
   .expandable {
-    background-color: @ivory;
+    background-color: @toc-background;
     border-bottom: @toc-border;
   }
 
@@ -246,20 +250,6 @@ a {
 
 .main-head {
   height: @mainhead_height;
-
-  .disclaimer {
-    font-size: 12px;
-    margin: 0;
-    padding: 0.5em 2em;
-  }
-
-  .masthead {
-    font-size: 14px;
-
-    .site-title {
-      height: 80px;
-    }
-  }
 }
 
 .landing-content,
@@ -271,8 +261,4 @@ a {
     height: auto;
     margin-top: 0;
   }
-}
-
-#site-header {
-  //display: none;
 }
