Override ereg's margin/padding
Fixes https://github.com/18F/fec-eregs/issues/81

--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -213,7 +213,9 @@ a {
 }
 
 // FEC is less boxy
-.regulation-nav a {
+.regulation-nav a,
+.regulation-nav a:hover,
+.regulation-nav .current {
   padding: 10px 5px;
   margin: 0 10px;
 }
