--- a/fec_eregs/static/fec_eregs/scss/_components.scss
+++ b/fec_eregs/static/fec_eregs/scss/_components.scss
@@ -20,3 +20,13 @@
   margin-top: 0;
   padding: 0 20px;
 }
+
+.site-nav .site-title {
+  // Manually convert rem to px
+  width: calc(100% - 150px);
+}
+
+//TODO when the breakpoints are fixed, this shouldn't be necessary
+.fec-main-head {
+  overflow: hidden;
+}
