Rename variable as per regulations-site

--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -245,7 +245,7 @@ a {
 }
 
 .main-head {
-  height: @header_height;
+  height: @mainhead_height;
 
   .disclaimer {
     font-size: 12px;
@@ -264,7 +264,7 @@ a {
 
 .landing-content,
 .about-content {
-  margin-top: @header_height;
+  margin-top: @mainhead_height;
 
   .inner-wrap:before {
     display: table;
