--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -9,34 +9,34 @@
     <span class="disclaimer__right">This site is in <a href="https://18f.gsa.gov/dashboard/stages/#beta">beta</a>.</span>
   </div>
   <div class="masthead">
-    <a href="/" title="Home" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
+    <a href="{{ FEC_CMS_URL }}/" title="Home" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
     <ul class="utility-nav list--flat">
       <li class="utility-nav__item"><a href="{% url 'about' %}">About</a></li>
-      <li class="utility-nav__item"><a href="/contact-us/">Contact</a></li>
+      <li class="utility-nav__item"><a href="{{ FEC_CMS_URL }}/contact-us/">Contact</a></li>
     </ul>
   </div>
   <nav class="site-nav js-site-nav" aria-label="Site wide navigation">
     <button for="nav-toggle" class="js-nav-toggle site-nav__button site-nav__button--left" aria-controls="site-menu">Menu</button>
     <ul id="site-menu" class="site-nav__list t-serif">
       <li class="site-nav__item site-nav__item--with-dropdown js-sublist-parent">
-        <a href="/data" class="site-nav__link is-current">Campaign finance data</a>
+        <a href="{{ FEC_WEB_URL }}/" class="site-nav__link is-current">Campaign finance data</a>
       </li>
       <li class="site-nav__item">
-        <a href="/registration-and-reporting/" class="site-nav__link">Registration and reporting</a>
+        <a href="{{ FEC_CMS_URL }}/registration-and-reporting/" class="site-nav__link">Registration and reporting</a>
       </li>
       <li class="site-nav__item">
-        <a href="/calendar" class="site-nav__link">Calendar</a>
+        <a href="{{ FEC_CMS_URL }}/calendar/" class="site-nav__link">Calendar</a>
       </li>
       <li class="site-nav__item">
-        <a href="/legal-resources" class="site-nav__link">Legal Resources</a>
-      </li>
-      <li class="site-nav__item utility-nav__item is-disabled">
-        <a href="#" class="site-nav__link">(About)</a>
+        <a href="{{ FEC_CMS_URL }}/legal-resources/" class="site-nav__link">Legal Resources</a>
       </li>
       <li class="site-nav__item utility-nav__item">
-        <a href="/contact-us/" class="site-nav__link is-disabled">Contact</a>
+        <a href="{% url 'about' %}" class="site-nav__link">About</a>
+      </li>
+      <li class="site-nav__item utility-nav__item">
+        <a href="{{ FEC_CMS_URL }}/contact-us/" class="site-nav__link">Contact</a>
       </li>
     </ul>
-    <a title="Home" href="" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
+    <a title="Home" href="{{ FEC_CMS_URL }}" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
   </nav>
 </div>
