--- a/fec_eregs/templates/regulations/base.html
+++ b/fec_eregs/templates/regulations/base.html
@@ -3,4 +3,11 @@
 
 {% block preload %}
 <link rel="stylesheet" href="{% static "fec_eregs/css/main.css"%}">
+<script type="text/javascript">
+window.API_VERSION = "{{ settings.FEC_API_VERSION }}";
+window.API_KEY = "{{ settings.FEC_API_KEY }}";
+window.API_LOCATION = "{{ settings.FEC_API_URL }}";
+window.CMS_URL = "{{ settings.FEC_CMS_URL }}";
+</script>
+<script type="text/javascript" src="{% static "fec_eregs/js/fec.bundle.js" %}"></script>
 {% endblock %}
