--- a/fec_eregs/static/fec_eregs/scss/main.scss
+++ b/fec_eregs/static/fec_eregs/scss/main.scss
@@ -20,9 +20,9 @@ $em-base: 10;
 // TODO The FEC header changes size based on breakpoints. We need to
 // adjust the fixed offsets for the eregs sidebars before enabling the
 // medium breakpoint. Effectively disable it for now.
-$medium-screen: 600px;
-$large-screen: 600px;
-$x-large-screen: 780px;
+$medium-screen: 720px;
+$large-screen: 720px;
+$x-large-screen: 1100px;
 
 
 @import 'functions';
@@ -34,13 +34,16 @@ $x-large-screen: 780px;
 // Base styling for html elements
 @import 'elements/links';
 @import 'elements/lists';
+@import 'elements/forms';
 @import 'elements/tables';
 @import 'elements/images';
 
 @import 'components/list-styles';
+@import 'components/mega-menu';
 
 @import 'modules/site-header';
 @import 'modules/nav';
+@import 'modules/glossary';
 
 @import 'headings';
 @import 'components';
