--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -1,42 +1,43 @@
 {% load static from staticfiles %}
 <div class="main-head">
   <div class="fec-disclaimer">
-    <span class="disclaimer__left">Looking for <a href="http://www.fec.gov">FEC.gov?</a></span>
-    <span class="disclaimer__center">
+    <span class="disclaimer__left">This site is in <a href="https://18f.gsa.gov/dashboard/stages/#beta">beta</a>, visit <a href="http://www.fec.gov">FEC.gov</a></span>
+    <span class="disclaimer__right">
       An official website of the United States Government
       <img alt="US flag signifying that this is a United States Federal Government website" src="{% static "fec_eregs/img/us_flag_small.png" %}">
     </span>
-    <span class="disclaimer__right">This site is in <a href="https://18f.gsa.gov/dashboard/stages/#beta">beta</a>.</span>
   </div>
   <div class="masthead">
     <a href="{{ FEC_CMS_URL }}/" title="Home" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
     <ul class="utility-nav list--flat">
-      <li class="utility-nav__item"><a href="{% url 'about' %}">About</a></li>
+      <li class="utility-nav__item is-disabled">(About)</li>
       <li class="utility-nav__item"><a href="{{ FEC_CMS_URL }}/contact-us/">Contact</a></li>
+      <li class="utility-nav__item"><a href="{{ FEC_CMS_URL }}/calendar/">Calendar</a></li>
+      <li class="utility-nav__item is-disabled"><span class="js-glossary-toggle glossary__toggle">Glossary</span></li>
     </ul>
   </div>
-  <nav class="site-nav js-site-nav" aria-label="Site wide navigation">
-    <button for="nav-toggle" class="js-nav-toggle site-nav__button site-nav__button--left" aria-controls="site-menu">Menu</button>
-    <ul id="site-menu" class="site-nav__list t-serif">
-      <li class="site-nav__item site-nav__item--with-dropdown js-sublist-parent">
-        <a href="{{ FEC_WEB_URL }}/" class="site-nav__link is-current">Campaign finance data</a>
+  <nav class="site-nav js-site-nav">
+    <ul id="site-menu" class="site-nav__list">
+      <li class="site-nav__item site-nav__item--with-dropdown" data-submenu="data">
+        <a href="{{ FEC_WEB_URL }}/" class="site-nav__link">Campaign finance data</a>
       </li>
       <li class="site-nav__item">
         <a href="{{ FEC_CMS_URL }}/registration-and-reporting/" class="site-nav__link">Registration and reporting</a>
       </li>
       <li class="site-nav__item">
-        <a href="{{ FEC_CMS_URL }}/calendar/" class="site-nav__link">Calendar</a>
+        <a href="{{ FEC_CMS_URL }}/legal-resources/" class="site-nav__link is-parent">Legal resources</a>
       </li>
-      <li class="site-nav__item">
-        <a href="{{ FEC_CMS_URL }}/legal-resources/" class="site-nav__link">Legal Resources</a>
-      </li>
-      <li class="site-nav__item utility-nav__item">
-        <a href="{% url 'about' %}" class="site-nav__link">About</a>
+      <li class="site-nav__item utility-nav__item is-disabled">
+        <a href="#" class="site-nav__link">(About)</a>
       </li>
       <li class="site-nav__item utility-nav__item">
         <a href="{{ FEC_CMS_URL }}/contact-us/" class="site-nav__link">Contact</a>
       </li>
+      <li class="site-nav__item utility-nav__item">
+        <a href="{{ FEC_CMS_URL }}/calendar/" class="site-nav__link">Calendar</a>
+      </li>
     </ul>
-    <a title="Home" href="{{ FEC_CMS_URL }}" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
+    <button for="nav-toggle" class="js-nav-toggle site-nav__button site-nav__button--left" aria-controls="site-menu">Menu</button>
+    <a title="Home" href="{{ FEC_CMS_URL }}/" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
   </nav>
 </div>
