--- a/fec_eregs/templates/regulations/chrome.html
+++ b/fec_eregs/templates/regulations/chrome.html
@@ -1,13 +1,45 @@
 {% overextends "regulations/chrome.html" %}
 {% load static from staticfiles %}
 
-{% block sidebar-drawer-icons %}
-<a href="#" id="panel-link" class="toc-toggle panel-slide">
-  <img id="open-active" src="{%static "regulations/img/open-caret.svg" %}" class="drawer-toggle-icon" alt="Open navigation drawer" />
-  <img id="open" src="{%static "regulations/img/open-caret-blue.svg" %}" class="drawer-toggle-icon" alt="Open navigation drawer" />
-  <img id="close" src="{%static "regulations/img/close-caret-blue.svg" %}" class="drawer-toggle-icon" alt="Close navigation drawer"/>
-  <img id="close-active" src="{%static "regulations/img/close-caret.svg" %}" class="drawer-toggle-icon" alt="Close navigation drawer"/>
-</a>
+{% block sub-head-drawer-icons %}
+{% endblock %}
+
+{% block sub-head-content %}
+<div class="page-header">
+  <ul class="breadcrumbs">
+    <li class="breadcrumbs__item">
+      <a class="breadcrumbs__link" href="{{ FEC_CMS_URL }}/">Home</a>
+    </li>
+    <li class="breadcrumbs__item">
+      <span class="breadcrumbs__separator">&gt;</span>
+      <a class="breadcrumbs__link" href="{{ FEC_CMS_URL }}/legal-resources/">Legal resources</a>
+    </li>
+    <li class="breadcrumbs__item">
+      <span class="breadcrumbs__separator">&gt;</span>
+      <a class="breadcrumbs__link" href="{{ FEC_CMS_URL }}/legal/regulations/">Regulations</a>
+    </li>
+    <li id="content-header" class="breadcrumbs__item breadcrumbs__item--current">
+      <span class="breadcrumbs__separator">&gt;</span>
+      {% block wayfinding %}
+      {{ block.super }}
+      {% endblock %}
+    </li>
+  </ul>
+</div>
+{% endblock %}
+
+{% block drawer-toc %}
+<a href="#content-wrapper" class="hidden-text">Skip to main content</a> <!-- skip to content link for screen readers-->
+<div class="toc-head">
+  <a href="#" id="panel-link" class="toc-toggle panel-slide">
+    <img id="open-active" src="{%static "regulations/img/open-caret.svg" %}" class="drawer-toggle-icon" alt="Open navigation drawer" />
+    <img id="open" src="{%static "regulations/img/open-caret-blue.svg" %}" class="drawer-toggle-icon" alt="Open navigation drawer" />
+    <img id="close" src="{%static "regulations/img/close-caret-blue.svg" %}" class="drawer-toggle-icon" alt="Close navigation drawer"/>
+    <img id="close-active" src="{%static "regulations/img/close-caret.svg" %}" class="drawer-toggle-icon" alt="Close navigation drawer"/>
+  </a>
+</div> <!-- /toc-head-->
+
+{{ block.super }}
 {% endblock %}
 
 {% block sidebar-toc-link %}
@@ -17,9 +49,6 @@
 {% endblock %}
 
 {% block sidebar-search-link %}
-{% endblock %}
-
-{% block header-secondary %}
 {% endblock %}
 
 {% block drawer-search %}
