--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -17,26 +17,28 @@
     </ul>
   </div>
   <nav class="site-nav js-site-nav">
-    <ul id="site-menu" class="site-nav__list">
-      <li class="site-nav__item site-nav__item--with-dropdown" data-submenu="data">
-        <a href="{{ FEC_WEB_URL }}/" class="site-nav__link">Campaign finance data</a>
-      </li>
-      <li class="site-nav__item">
-        <a href="{{ FEC_CMS_URL }}/registration-and-reporting/" class="site-nav__link">Registration and reporting</a>
-      </li>
-      <li class="site-nav__item">
-        <a href="{{ FEC_CMS_URL }}/legal-resources/" class="site-nav__link is-parent">Legal resources</a>
-      </li>
-      <li class="site-nav__item utility-nav__item is-disabled">
-        <a href="#" class="site-nav__link">(About)</a>
-      </li>
-      <li class="site-nav__item utility-nav__item">
-        <a href="{{ FEC_CMS_URL }}/contact-us/" class="site-nav__link">Contact</a>
-      </li>
-      <li class="site-nav__item utility-nav__item">
-        <a href="{{ FEC_CMS_URL }}/calendar/" class="site-nav__link">Calendar</a>
-      </li>
-    </ul>
+    <div id="site-menu" class="site-nav__container">
+      <ul class="site-nav__panel site-nav__panel--main">
+        <li class="site-nav__item site-nav__item--with-dropdown" data-submenu="data">
+          <a href="{{ FEC_WEB_URL }}/" class="site-nav__link">Campaign finance data</a>
+        </li>
+        <li class="site-nav__item">
+          <a href="{{ FEC_CMS_URL }}/registration-and-reporting/" class="site-nav__link">Registration and reporting</a>
+        </li>
+        <li class="site-nav__item">
+          <a href="{{ FEC_CMS_URL }}/legal-resources/" class="site-nav__link is-parent">Legal resources</a>
+        </li>
+        <li class="site-nav__item utility-nav__item is-disabled">
+          <a href="#" class="site-nav__link">(About)</a>
+        </li>
+        <li class="site-nav__item utility-nav__item">
+          <a href="{{ FEC_CMS_URL }}/contact-us/" class="site-nav__link">Contact</a>
+        </li>
+        <li class="site-nav__item utility-nav__item">
+          <a href="{{ FEC_CMS_URL }}/calendar/" class="site-nav__link">Calendar</a>
+        </li>
+      </ul>
+    </div>
     <button for="nav-toggle" class="js-nav-toggle site-nav__button site-nav__button--left" aria-controls="site-menu">Menu</button>
     <a title="Home" href="{{ FEC_CMS_URL }}/" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
   </nav>
