--- a/fec_eregs/static/fec_eregs/scss/main.scss
+++ b/fec_eregs/static/fec_eregs/scss/main.scss
@@ -43,6 +43,7 @@ $x-large-screen: 1100px;
 @import 'components/breadcrumbs';
 @import 'components/buttons';
 @import 'components/form-styles';
+@import 'components/icon-headings';
 @import 'components/list-styles';
 @import 'components/mega-menu';
 @import 'components/page-headers';
