added search to landing page

--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -144,6 +144,42 @@ a {
   }
 }
 
+// Landing page search
+
+html, body, .landing-content, .search-panel {
+  height: 100%;
+}
+
+.search-panel {
+  background-color: @toc-background;
+}
+
+.search-box input[type="text"] {
+  float: left;
+  border-radius: 0px;
+}
+
+.search-box button {
+  background-color: @gray-medium;
+}
+
+.search-header {
+  border-bottom: 2px solid #112e51;
+  margin-bottom: 2rem;
+  padding: .5rem;
+  font-size: 1.5rem;
+  font-family: ghandi, serif;
+  text-align: center;
+}
+
+.regulations-title {
+  border-bottom: 2px solid #112e51;
+  padding-bottom: 10px;
+}
+
+.reg-list {
+  border-top: none;
+}
 
 // TOC
 .panel {
