--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -165,7 +165,7 @@ html, body, .landing-content, .search-panel {
 }
 
 .search-header {
-  border-bottom: 2px solid #112e51;
+  border-bottom: 2px solid @gray;
   margin-bottom: 2rem;
   padding: .5rem;
   font-size: 1.5rem;
