adding legal disclaimer

--- a/fec_eregs/templates/regulations/generic_universal.html
+++ b/fec_eregs/templates/regulations/generic_universal.html
@@ -57,8 +57,7 @@
 </div> <!-- /.landing-main -->
 
 </div> <!-- /.landing-content -->
-
-{% include "regulations/full_footer.html" %}
+{% include "regulations/footer.html" %}
 
 {% block endscripts %}
 {% endblock %}
