getting up to date

--- a/fec_eregs/templates/regulations/generic_universal.html
+++ b/fec_eregs/templates/regulations/generic_universal.html
@@ -39,6 +39,8 @@
         {% endblock %}
 
         {% block reg-list %}
+        <h1> testing </h1>
+        {{ regulations }}
         {{ block.super }}
         {% endblock %}
 
@@ -57,7 +59,6 @@
 </div> <!-- /.landing-main -->
 
 </div> <!-- /.landing-content -->
-{% include "regulations/footer.html" %}
 
 {% block endscripts %}
 {% endblock %}
