--- a/fec_eregs/templates/regulations/regulation-content.html
+++ b/fec_eregs/templates/regulations/regulation-content.html
@@ -7,13 +7,17 @@
         {%include "regulations/navigation.html"%}
     {% endfor %}
     <div class="slab slab--neutral footer-disclaimer">
-            <p><small>This site is in beta, which means we're testing content. This content is not finalized,
-              is not legal advice and is subject to change.</small></p>
-            <p><small>Everything on this site should be read in conjunction with FEC.gov.
+            <p>
+              <small>This site is in beta, which means we're testing content. This content is not finalized,
+              is not legal advice and is subject to change.
+              </small>
+            </p>
+            <p>
+              <small>Everything on this site should be read in conjunction with FEC.gov.
               Please let us know what you think of our new content; use the feedback tool on the
               <a href="https://beta.fec.gov/legal-resources/">legal resources</a> landing page.
-            </small></p>
+              </small>
+            </p>
     </div>
-
 {% endif %}
 </section> <!-- /.reg-text -->
