adding uniform spacing around disclaimer

--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -373,3 +373,7 @@ html, body, .landing-content, .search-panel {
   overflow: hidden;
   margin-bottom: 50px;
 }
+
+div.footer-disclaimer {
+  padding: 14px 30px 14px 30px;
+}
