Use the new regulations search url

--- a/fec_eregs/templates/regulations/generic_universal.html
+++ b/fec_eregs/templates/regulations/generic_universal.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="u-padding-left u-padding--right">
           <div class="search-header">Search regulations</div>
-          <form action="{{ FEC_WEB_URL }}/legal/regulations/" method="GET" role="search">
+          <form action="{{ FEC_WEB_URL }}/legal/search/regulations/" method="GET" role="search">
             <div class="combo--search--mini">
               <label class="label t-left-aligned" for="search-regs">Terms</label>
               <input id="search-regs" name="search" class="combo__input" type="text" title="Search term"/>
