Removing search__example--with-select

--- a/fec_eregs/templates/regulations/generic_universal.html
+++ b/fec_eregs/templates/regulations/generic_universal.html
@@ -19,7 +19,7 @@
               <input type="hidden" name="search_type" id="version-hidden" title="Search Type" value="regulations"/>
               <button class="combo__button button--search button--standard" type="submit"/>
                 <span class="u-visually-hidden">Search</span></button>
-              <span class="t-note t-sans search__example search__example--with-select">Examples: spending; 9003.6</span>
+              <span class="t-note t-sans search__example">Examples: spending; 9003.6</span>
             </div>
           </form>
         </div>
