--- a/fec_eregs/templates/regulations/generic_universal.html
+++ b/fec_eregs/templates/regulations/generic_universal.html
@@ -10,7 +10,7 @@
   {% block hero %} {% endblock %}
 <div class="usa-width-one-fourth search-panel">
     <div class="container">
-      <div class="u-padding-left u-padding--right">
+      <div class="u-padding--left u-padding--right">
           <h2 class="search-header">Search regulations</h2>
           <form action="{{ FEC_WEB_URL }}/legal/search/regulations/" method="GET" role="search" class="group">
             <div class="combo--search--mini">
