--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -10,7 +10,7 @@
   <div class="masthead">
     <a href="{{ FEC_CMS_URL }}/" title="Home" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
     <ul class="utility-nav list--flat">
-      <li class="utility-nav__item is-disabled">About</li>
+      <li class="utility-nav__item"><a href="{{ FEC_CMS_URL }}/about/">About</a></li>
       <li class="utility-nav__item"><a href="{{ FEC_CMS_URL }}/calendar/">Calendar</a></li>
       <li class="utility-nav__item is-disabled"><span class="js-glossary-toggle glossary__toggle">Glossary</span></li>
     </ul>
@@ -18,25 +18,34 @@
   <nav class="site-nav js-site-nav">
     <div id="site-menu" class="site-nav__container">
       <ul class="site-nav__panel site-nav__panel--main">
-        <li class="site-nav__item site-nav__item--with-dropdown" data-submenu="data">
-          <a href="{{ FEC_WEB_URL }}/" class="site-nav__link">Campaign finance data</a>
+        <li><h2 class="site-nav__title u-under-lg-only">Menu</h2></li>
+        <li class="site-nav__item u-under-lg-only">
+          <a class="site-nav__link" href="{{ cms_url }}" rel="home">
+            <span class="site-nav__link__title">Home</span>
+          </a>
         </li>
-        <li class="site-nav__item">
-          <a href="{{ FEC_CMS_URL }}/registration-and-reporting/" class="site-nav__link">Registration and reporting</a>
+        <li class="site-nav__item" data-submenu="data">
+          <a href="{{ FEC_WEB_URL }}" class="site-nav__link {% if parent == 'data' %}is-parent{% endif %}">
+            <span class="site-nav__link__title">Campaign finance data</span>
+          </a>
         </li>
-        <li class="site-nav__item">
-          <a href="{{ FEC_CMS_URL }}/legal-resources/" class="site-nav__link is-parent">Legal resources</a>
+        <li class="site-nav__item site-nav__item--secondary" data-submenu="help">
+          <a href="{{ FEC_CMS_URL }}/help-candidates-committees/" class="site-nav__link">
+            <span class="site-nav__link__title">Help for candidates and committees</span>
+          </a>
         </li>
-        <li class="site-nav__item utility-nav__item is-disabled">
-          <a href="#" class="site-nav__link">About</a>
+        <li class="site-nav__item" data-submenu="legal">
+          <a href="{{ FEC_CMS_URL }}/legal-resources" class="site-nav__link {% if parent == 'legal' %}is-parent{% endif %}">
+            <span class="site-nav__link__title">Legal resources</span>
+          </a>
         </li>
-        <li class="site-nav__item utility-nav__item">
-          <a href="{{ FEC_CMS_URL }}/calendar/" class="site-nav__link">Calendar</a>
+        <li class="site-nav__item utility-nav__item u-under-lg-only">
+          <a class="site-nav__link" href="{{ FEC_CMS_URL }}/calendar">Calendar</a>
         </li>
       </ul>
     </div>
-    <button for="nav-toggle" class="js-nav-toggle site-nav__button site-nav__button--left" aria-controls="site-menu">Menu</button>
-    <a title="Home" href="{{ FEC_CMS_URL }}/" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
+    <button for="nav-toggle" class="js-nav-toggle site-nav__button" aria-controls="nav-main">Menu</button>
+    <a title="Home" href="{{ FEC_CMS_URL }}" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
   </nav>
   <div class="page-header page-header--primary">
     <ul class="breadcrumbs">
